gatekeeper/gatekeeper-allow-only-support-tools.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: only-support-tools-image
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: [Pod]
      - apiGroups: ["batch"]
        kinds: [Job]
    namespaces:
      - debugger
  parameters:
    repos:
      - "registry.redhat.io/openshift4/ose-tools-rhel8:latest"
    # Only allow this exact image, not a prefix
    exactMatch: true
