gatekeeper/gatekeeper-allowedrepos-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
            exactMatch:
              type: boolean
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos
        violation[{
          "msg": msg,
          "details": {"container": container.name, "image": container.image}
        }] {
          container := input.review.object.spec.containers[_]
          not image_allowed(container.image, input.parameters)
          msg := sprintf("container '%v' has image '%v' which is not allowed", [container.name, container.image])
        }
        image_allowed(image, params) {
          params.exactMatch == true
          params.repos[_] == image
        }
        image_allowed(image, params) {
          not params.exactMatch
          startswith(image, params.repos[_])
        }
